# simd-json

./: .drone.yml  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Contribution.md  Makefile  README.md  appveyor.yml  codecov.yml  fuzz.sh  tree
.cargo/: config
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: big-endian.yml  nightly.yml  pr-perf.yml  quality.yaml  rust.yml  tests.yml  validate.yaml
benches/: parse.rs  to_tape.rs
data/: event_stacktrace_10kb.json  hdfs_log.json  log.json
data/crash/: crash000000.json  crash000001.json  crash000002.json  crash000003.json  crash000004.json  crash000005.json  crash000006.json  crash000007.json  crash000008.json  crash000009.json  crash000010.json  crash000011.json  crash000012.json  crash000013.json  crash000014.json  crash000015.json  crash000016.json  crash000017.json  crash000018.json  crash000019.json  crash000020.json  crash000021.json  crash000022.json  crash000023.json  crash000024.json  crash000025.json  crash000026.json  crash000027.json  crash000028.json  crash000029.json  crash000030.json  crash000031.json  crash000032.json  crash000033.json  crash000034.json  crash000036.json  crash000037.json
data/fail/: fail66.json  fail68.json  fail69.json  fail70.json  fail71.json  fail73.json  fail74.json  fail75.json  fail77.json  fail78.json
examples/: perf.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: passing.rs
simd-fuzz-target/: .gitignore  Cargo.toml  Makefile
simd-fuzz-target/src/: main.rs
src/: avx2_deser.rs  avx2_stage1.rs  charutils.rs  cow.rs  error.rs  halfbrown.rs  known_key.rs  lib.rs  lib_avx2.rs  lib_sse42.rs  macros.rs  number.rs  numberparse.rs  parsedjson.rs  portability.rs  prelude.rs  safer_unchecked.rs  scalemap.rs  serde.rs  sse42_deser.rs  sse42_stage1.rs  stage1.rs  stage1_avx2.rs  stage1_sse42.rs  stage2.rs  stringparse.rs  tests.rs  utf8check.rs  value.rs  value_borrow.rs  value_owned.rs
src/avx2/: deser.rs  generator.rs  stage1.rs  utf8check.rs
src/halfbrown/: macros.rs  serde.rs  vecmap.rs
src/impls/: mod.rs
src/impls/avx2/: deser.rs  mod.rs  stage1.rs
src/impls/native/: deser.rs  mod.rs  stage1.rs
src/impls/neon/: deser.rs  stage1.rs
src/impls/portable/: deser.rs  mod.rs  stage1.rs
src/impls/simd128/: deser.rs  mod.rs  stage1.rs
src/impls/sse42/: deser.rs  stage1.rs
src/native/: deser.rs  mod.rs  stage1.rs
src/neon/: deser.rs  generator.rs  intrinsics.rs  intrinsics2.rs  mod.rs  simd.rs  simd_llvm.rs  stage1.rs  utf8check.rs
src/numberparse/: approx.rs  correct.rs
src/numberparse/correct/: numberconst.rs
src/portable/: deser.rs  mod.rs  stage1.rs
src/serde/: de.rs  halfbrown.rs  se.rs  value.rs
src/serde/de/: tests.rs
src/serde/se/: pp.rs
src/serde/value/: borrowed.rs  owned.rs  shared.rs
src/serde/value/borrowed/: de.rs  ordered.rs  se.rs
src/serde/value/borrowed/ordered/: de.rs  se.rs
src/serde/value/owned/: .se.rs.swp  cmp.rs  de.rs  ordered.rs  se.rs
src/serde/value/owned/ordered/: de.rs  se.rs
src/simd128/: deser.rs  mod.rs  stage1.rs
src/sse42/: deser.rs  generator.rs  mod.rs  stage1.rs  utf8check.rs
src/tests/: impls.rs  serde.rs
src/util/: diyfp.rs  grisu2.rs  print_dec.rs
src/value/: borrowed.rs  de.rs  generator.rs  lazy.rs  owned.rs  se.rs  tape.rs
src/value/borrowed/: cmp.rs  de.rs  from.rs  mbs.rs  ordered.rs  se.rs  serde.rs  serialize.rs
src/value/borrowed/ordered/: cmp.rs  from.rs
src/value/lazy/: array.rs  cmp.rs  from.rs  object.rs  trait_impls.rs
src/value/owned/: cmp.rs  de.rs  from.rs  mbs.rs  ordered.rs  se.rs  serde.rs  serialize.rs
src/value/owned/ordered/: cmp.rs  from.rs
src/value/tape/: array.rs  cmp.rs  from.rs  object.rs  trait_impls.rs
tests/: alloc.rs  jsonchecker.rs  ordered_float.rs  serde_128_bit.rs  serenity.rs  weird_type.rs
value-trait/: Cargo.toml
value-trait/src/: array.rs  generator.rs  lib.rs  node.rs  object.rs
value-trait/src/node/: from.rs
